paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c2/sample_004/target.compile.log
error[E0119]: conflicting implementations of trait `TypeId` for type `f64`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/conversions/bool_char_int_c2/sample_004/target.rs:39:1
   |
33 | impl TypeId for f64 {
   | ------------------- first implementation here
...
39 | impl TypeId for LongDouble {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `f64`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.